@@ -8,3 +8,4 @@ versionstamp
 test.log
 jtsbin
 eclipsebin
+classpath
