@@ -103,6 +103,7 @@ section also use it.
 	## transform eventually present box in input
 	apply_grid(geometry, float8, float8, float8, float8); *LWG*
 	translate(geometry,float8,float8,[float8]) *SRL*
+	scale(geometry,float8,float8,[float8]) *SRL*
 
 	## These use LWGEOM as a mean to access and modify SERIALIZED form
 	reverse(geometry) *LWG* 
