@@ -907,6 +907,10 @@ extern double distance2d_line_poly(LWLINE *line, LWPOLY *poly);
 extern double lwgeom_mindistance2d_recursive(uchar *lw1, uchar *lw2);
 extern void lwgeom_translate_recursive(uchar *serialized, double xoff, double yoff, double zoff);
 extern void lwgeom_translate_ptarray(POINTARRAY *pa, double xoff, double yoff, double zoff);
+extern void lwgeom_scale_recursive(uchar *serialized, double xfac, double yfac, double zfac);
+extern void lwgeom_scale_ptarray(POINTARRAY *pa, double xfac, double yfac, double zfac);
+extern void lwgeom_transscale_recursive(uchar *serialized, double xoff, double yoff, double xfac, double yfac);
+extern void lwgeom_transscale_ptarray(POINTARRAY *pa, double xoff, double yoff, double xfac, double yfac);
 extern int lwgeom_pt_inside_circle(POINT2D *p, double cx, double cy, double rad);
 extern int32 lwgeom_npoints(uchar *serialized);
 extern char ptarray_isccw(const POINTARRAY *pa);
