@@ -870,6 +870,21 @@ CREATEFUNCTION translate(geometry,float8,float8)
 	AS ' SELECT translate($1, $2, $3, 0) '
 	LANGUAGE 'SQL' _IMMUTABLE_STRICT; -- WITH (isstrict);
 
+CREATEFUNCTION scale(geometry,float8,float8,float8)
+	RETURNS geometry
+	AS '@MODULE_FILENAME@', 'LWGEOM_scale'
+	LANGUAGE 'C' _IMMUTABLE_STRICT; -- WITH (isstrict) ;
+
+CREATEFUNCTION scale(geometry,float8,float8)
+	RETURNS geometry
+	AS ' SELECT scale($1, $2, $3, 1) '
+	LANGUAGE 'SQL' _IMMUTABLE_STRICT; -- WITH (isstrict);
+
+CREATEFUNCTION transscale(geometry,float8,float8,float8,float8)
+	RETURNS geometry
+	AS '@MODULE_FILENAME@', 'LWGEOM_transscale'
+	LANGUAGE 'C' _IMMUTABLE_STRICT; -- WITH (isstrict) ;
+
 --- CHIP functions
 
 CREATEFUNCTION srid(chip)
